Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -14,5 +14,5 @@
   "sn22.47:2.1": "So ist er  nicht frei von dieser Art, die Dinge zu betrachten, und der Einbildung ‚ich bin‘. ",
   "sn22.47:2.2": "Solange er nicht frei ist von der Einbildung ‚ich bin‘, werden die fünf Sinne empfangen: ",
   "sn22.47:2.3": "Sehsinn, Hörsinn, Geruchssinn, Geschmackssinn und Berührungssinn. ",
-  "sn22.47:2.4": "Geist, Gedanken und das Element der Unwissenheit, sie alle sind da. "
+  "sn22.47:2.4": "Und es gibt den Geist, Gedanken und das Element der Unwissenheit. "
 }
