--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.47:2.4": "Und es gibt den Geist, Gedanken und das Element der Unwissenheit. ",
   "sn22.47:2.5": "Wenn er unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, denkt ein ungebildeter gewöhnlicher Mensch: ‚Ich bin‘, ",
   "sn22.47:2.6": "‚Ich bin das‘, ",
-  "sn22.47:2.7": "‚Ich werde sein‘, "
+  "sn22.47:2.7": "‚Ich werde sein‘, ",
+  "sn22.47:2.8": "‚Ich werde nicht sein‘, "
 }
