Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.47:2.6": "‚Ich bin das‘, ",
   "sn22.47:2.7": "‚Ich werde sein‘, ",
   "sn22.47:2.8": "‚Ich werde nicht sein‘, ",
-  "sn22.47:2.9": "‚Ich werde materiell sein‘,"
+  "sn22.47:2.9": "‚Ich werde materiell sein‘,",
+  "sn22.47:2.10": " ‚Ich werde formlos sein‘, "
 }
