--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.47:2.7": "‚Ich werde sein‘, ",
   "sn22.47:2.8": "‚Ich werde nicht sein‘, ",
   "sn22.47:2.9": "‚Ich werde materiell sein‘,",
-  "sn22.47:2.10": " ‚Ich werde formlos sein‘, "
+  "sn22.47:2.10": " ‚Ich werde formlos sein‘, ",
+  "sn22.47:2.11": "‚Ich werde Wahrnehmung besitzen‘, "
 }
