--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.47:2.8": "‚Ich werde nicht sein‘, ",
   "sn22.47:2.9": "‚Ich werde materiell sein‘,",
   "sn22.47:2.10": " ‚Ich werde formlos sein‘, ",
-  "sn22.47:2.11": "‚Ich werde Wahrnehmung besitzen‘, "
+  "sn22.47:2.11": "‚Ich werde Wahrnehmung besitzen‘, ",
+  "sn22.47:2.12": "‚Ich werde keine Wahrnehmung besitzen‘, "
 }
