Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.47:2.9": "‚Ich werde materiell sein‘,",
   "sn22.47:2.10": " ‚Ich werde formlos sein‘, ",
   "sn22.47:2.11": "‚Ich werde Wahrnehmung besitzen‘, ",
-  "sn22.47:2.12": "‚Ich werde keine Wahrnehmung besitzen‘, "
+  "sn22.47:2.12": "‚Ich werde keine Wahrnehmung besitzen‘, ",
+  "sn22.47:2.13": "‚Ich werde weder Wahrnehmung besitzen noch keine Wahrnehmung besitzen‘. "
 }
