Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.47:2.11": "‚Ich werde Wahrnehmung besitzen‘, ",
   "sn22.47:2.12": "‚Ich werde ohne Wahrnehmung sein‘, ",
   "sn22.47:2.13": "‚Ich werde weder Wahrnehmung besitzen noch ohne Wahrnehmung sein‘. ",
-  "sn22.47:3.1": "Die fünf Sinne bleiben da, wo sie sind, "
+  "sn22.47:3.1": "Die fünf Sinne bleiben da, wo sie sind, ",
+  "sn22.47:3.2": "aber ein gebildeter edler Schüler gibt die Unwissenheit über sie auf und bringt Erkenntnis hervor. "
 }
