--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.47:3.1": "Die fünf Sinne bleiben da, wo sie sind, ",
   "sn22.47:3.2": "aber ein gebildeter edler Schüler gibt die Unwissenheit über sie auf und bringt Wissen hervor. ",
   "sn22.47:3.3": "Mit dem Schwinden der Unwissenheit und dem Entstehen von Wissen denkt er nicht: ‚Ich bin‘, ",
-  "sn22.47:3.4": "‚Ich bin das‘, "
+  "sn22.47:3.4": "‚Ich bin das‘, ",
+  "sn22.47:3.5": "‚Ich werde sein‘, "
 }
