--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn22.47:3.3": "Mit dem Schwinden der Unwissenheit und dem Entstehen von Wissen denkt er nicht: ‚Ich bin‘, ",
   "sn22.47:3.4": "‚Ich bin das‘, ",
   "sn22.47:3.5": "‚Ich werde sein‘, ",
-  "sn22.47:3.6": "‚Ich werde nicht sein‘, "
+  "sn22.47:3.6": "‚Ich werde nicht sein‘, ",
+  "sn22.47:3.7": "‚Ich werde Form besitzen‘, "
 }
