Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.47:3.4": "‚Ich bin das‘, ",
   "sn22.47:3.5": "‚Ich werde sein‘, ",
   "sn22.47:3.6": "‚Ich werde nicht sein‘, ",
-  "sn22.47:3.7": "‚Ich werde Form besitzen‘, "
+  "sn22.47:3.7": "‚Ich werde Form besitzen‘, ",
+  "sn22.47:3.8": " ‚Ich werde formlos sein‘, "
 }
