Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.47:3.5": "‚Ich werde sein‘, ",
   "sn22.47:3.6": "‚Ich werde nicht sein‘, ",
   "sn22.47:3.7": "‚Ich werde Form besitzen‘, ",
-  "sn22.47:3.8": " ‚Ich werde formlos sein‘, "
+  "sn22.47:3.8": " ‚Ich werde formlos sein‘, ",
+  "sn22.47:3.9": "‚Ich werde Wahrnehmung besitzen‘, "
 }
