--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.47:3.6": "‚Ich werde nicht sein‘, ",
   "sn22.47:3.7": "‚Ich werde Form besitzen‘, ",
   "sn22.47:3.8": " ‚Ich werde formlos sein‘, ",
-  "sn22.47:3.9": "‚Ich werde Wahrnehmung besitzen‘, "
+  "sn22.47:3.9": "‚Ich werde Wahrnehmung besitzen‘, ",
+  "sn22.47:3.10": "‚Ich werde ohne Wahrnehmung sein‘, "
 }
