--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn22.47:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.47:0.3": "Betrachtungsweisen ",
   "sn22.47:1.1": "In Sāvatthī. ",
-  "sn22.47:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die verschiedene Dinge als das Selbst ansehen, alle sehen die fünf mit Ergreifen verbundenen Aggregate so an, oder eines von ihnen. ",
+  "sn22.47:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die verschiedene Dinge als das Selbst betrachten, alle betrachten die fünf mit Ergreifen verbundenen Aggregate so, oder eines von ihnen. ",
   "sn22.47:1.3": "Welche fünf? ",
   "sn22.47:1.4": "Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
   "sn22.47:1.5": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
