Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.48:0.1": "Verbundene Lehrreden 22.48 ",
-  "sn22.48:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein "
+  "sn22.48:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
+  "sn22.48:0.3": "Aggregate "
 }
