--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.48:0.1": "Verbundene Lehrreden 22.48 ",
   "sn22.48:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
-  "sn22.48:0.3": "Aggregate "
+  "sn22.48:0.3": "Aggregate ",
+  "sn22.48:1.1": "In Sāvatthī. "
 }
