Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.48:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.48:0.3": "Aggregate ",
   "sn22.48:1.1": "In Sāvatthī. ",
-  "sn22.48:1.2": "„Mönche und Nonnen, ich werde euch die fünf Aggregate lehren und die fünf mit Ergreifen verbundenen Aggregate. "
+  "sn22.48:1.2": "„Mönche und Nonnen, ich werde euch die fünf Aggregate lehren und die fünf mit Ergreifen verbundenen Aggregate. ",
+  "sn22.48:1.3": "Hört zu … "
 }
