--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.48:1.2": "„Mönche und Nonnen, ich werde euch die fünf Aggregate lehren und die fünf mit Ergreifen verbundenen Aggregate. ",
   "sn22.48:1.3": "Hört zu … ",
   "sn22.48:1.4": "Und was sind die fünf Aggregate? ",
-  "sn22.48:1.5": "Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. "
+  "sn22.48:1.5": "Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
+  "sn22.48:1.6": "Jegliche Art von Gefühl … "
 }
