--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.48:1.3": "Hört zu … ",
   "sn22.48:1.4": "Und was sind die fünf Aggregate? ",
   "sn22.48:1.5": "Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
-  "sn22.48:1.6": "Jegliche Art von Gefühl … "
+  "sn22.48:1.6": "Jegliche Art von Gefühl … ",
+  "sn22.48:1.7": "Jegliche Art von Wahrnehmung … "
 }
