--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.48:1.6": "Jegliche Art von Gefühl … ",
   "sn22.48:1.7": "Jegliche Art von Wahrnehmung … ",
   "sn22.48:1.8": "Jegliche Art von Entscheidung … ",
-  "sn22.48:1.9": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. "
+  "sn22.48:1.9": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. ",
+  "sn22.48:1.10": "Diese nennt man die fünf Aggregate. "
 }
