--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.48:2.1": "Und was sind die fünf mit Ergreifen verbundenen Aggregate? ",
   "sn22.48:2.2": "Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah, die von Befleckungen begleitet und zum Ergreifen einlädt: Das nennt man das mit Ergreifen verbundene Form-Aggregat. ",
   "sn22.48:2.3": "Jegliche Art von Gefühl … ",
-  "sn22.48:2.4": "Jegliche Art von Wahrnehmung … "
+  "sn22.48:2.4": "Jegliche Art von Wahrnehmung … ",
+  "sn22.48:2.5": "Jegliche Art von Entscheidung … "
 }
