--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.48_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn22.48:1.5": "Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
   "sn22.48:1.6": "Jegliche Art von Gefühl … ",
   "sn22.48:1.7": "Jegliche Art von Wahrnehmung … ",
-  "sn22.48:1.8": "Jegliche Art von Entscheidung … ",
+  "sn22.48:1.8": "Jegliche Art von Entscheidungen … ",
   "sn22.48:1.9": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. ",
   "sn22.48:1.10": "Diese nennt man die fünf Aggregate. ",
   "sn22.48:2.1": "Und was sind die fünf mit Ergreifen verbundenen Aggregate? ",
