--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -566,7 +566,7 @@
   "sn-blurbs:sn22.45": "Wenn man die fünf Aggregate als unbeständig usw. sieht, führt das zur Freiheit. ",
   "sn-blurbs:sn22.46": "Wenn man die fünf Aggregate als unbeständig usw. sieht, führt das zum Loslassen von Ansichten und letztlich zur Freiheit. ",
   "sn-blurbs:sn22.47": "Wenn man etwas als sein Selbst ansieht, ist es immer eins der fünf Aggregate. ",
-  "sn-blurbs:sn22.48": "Die Unterscheidung zwischen den „fünf Aggregaten“ und den „fünf mit Ergreifen verbundenen Aggregaten“. ",
+  "sn-blurbs:sn22.48": "Der Unterschied zwischen den „fünf Aggregaten“ und den „fünf mit Ergreifen verbundenen Aggregaten“. ",
   "sn-blurbs:sn22.59": "Im Wildpark bei Varanasi hält der Buddha vor der Gruppe der fünf Mönche seine berühmte zweite Lehrrede über das Nicht-Selbst in Bezug auf die Aggregate. Am Ende werden alle Vollendete. ",
   "sn-blurbs:sn22.62": "Alle Philosophen müssen akzeptieren, dass die fünf Aggregate in einer Sprache beschrieben werden, die sich entweder auf Vergangenheit, Zukunft oder Gegenwart bezieht. ",
   "sn-blurbs:sn22.90": "Nachdem der Buddha auf seinem Sterbebett für ihn eine besondere Strafe angeordnet hat, sucht der Ehrwürdige Channa bei den Mönchen und Nonnen um Unterweisung nach. Als er nicht befriedigt ist, sucht er Ānanda auf, der ihn das an Kaccāyana gerichtete Sutta (SN 12.15) lehrt. ",
