Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -654,6 +654,7 @@
   "sn-name:653.sn22.46": "Unbeständigkeit (2) ",
   "sn-name:654.sn22.47": "Betrachtungsweisen ",
   "sn-name:655.sn22.48": "Aggregate ",
+  "sn-name:656.sn22.49": "Mit Soṇa ",
   "sn-name:660.sn22-majjhimapannasaka": "Die mittleren Fünfzig ",
   "sn-name:661.sn22-upayavagga": "Das Kapitel über Gebundenheit ",
   "sn-name:664.sn22.55": "Tief empfundene Sprüche ",
