--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -655,6 +655,7 @@
   "sn-name:654.sn22.47": "Betrachtungsweisen ",
   "sn-name:655.sn22.48": "Aggregate ",
   "sn-name:656.sn22.49": "Mit Soṇa ",
+  "sn-name:657.sn22.50": "Mit Soṇa (2) ",
   "sn-name:660.sn22-majjhimapannasaka": "Die mittleren Fünfzig ",
   "sn-name:661.sn22-upayavagga": "Das Kapitel über Gebundenheit ",
   "sn-name:664.sn22.55": "Tief empfundene Sprüche ",
