--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.49:0.1": "Verbundene Lehrreden 22.49 ",
   "sn22.49:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.49:0.3": "Mit Soṇa ",
-  "sn22.49:1.1": "So habe ich es gehört: "
+  "sn22.49:1.1": "So habe ich es gehört: ",
+  "sn22.49:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
 }
