--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.49:0.3": "Mit Soṇa ",
   "sn22.49:1.1": "So habe ich es gehört: ",
   "sn22.49:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
-  "sn22.49:1.3": "Da ging der Hausbesitzer Soṇa zum Buddha … "
+  "sn22.49:1.3": "Da ging der Hausbesitzer Soṇa zum Buddha … ",
+  "sn22.49:1.4": "Der Buddha sagte zu ihm: "
 }
