--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.49:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "sn22.49:1.3": "Da ging der Hausbesitzer Soṇa zum Buddha … ",
   "sn22.49:1.4": "Der Buddha sagte zu ihm: ",
-  "sn22.49:2.1": "„Soṇa, es gibt Asketen und Brahmanen, die – auf der Grundlage von Form, die unbeständig und Leiden ist und zugrunde gehen muss – sich so betrachten: ‚Ich bin besser‘, "
+  "sn22.49:2.1": "„Soṇa, es gibt Asketen und Brahmanen, die – auf der Grundlage von Form, die unbeständig und Leiden ist und zugrunde gehen muss – sich so betrachten: ‚Ich bin besser‘, ",
+  "sn22.49:2.2": "‚Ich bin gleich‘ "
 }
