--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.49:1.4": "Der Buddha sagte zu ihm: ",
   "sn22.49:2.1": "„Soṇa, es gibt Asketen und Brahmanen, die – auf der Grundlage von Form, die unbeständig und Leiden ist und zugrunde gehen muss – sich so betrachten: ‚Ich bin besser‘, ",
   "sn22.49:2.2": "‚Ich bin gleich‘ ",
-  "sn22.49:2.3": "oder ‚Ich bin schlechter‘. "
+  "sn22.49:2.3": "oder ‚Ich bin schlechter‘. ",
+  "sn22.49:2.4": "Was ist das anderes, als nicht wahrhaftig zu sehen? "
 }
