Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.49:2.5": "Auf der Grundlage von Gefühl … ",
   "sn22.49:2.9": "Auf der Grundlage von Wahrnehmung … ",
   "sn22.49:2.10": "Auf der Grundlage von Entscheidungen … ",
-  "sn22.49:2.14": "Auf der Grundlage von Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, "
+  "sn22.49:2.14": "Auf der Grundlage von Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
+  "sn22.49:2.15": "‚Ich bin gleich‘ "
 }
