--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.49:2.9": "Auf der Grundlage von Wahrnehmung … ",
   "sn22.49:2.10": "Auf der Grundlage von Entscheidungen … ",
   "sn22.49:2.14": "Auf der Grundlage von Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
-  "sn22.49:2.15": "‚Ich bin gleich‘ "
+  "sn22.49:2.15": "‚Ich bin gleich‘ ",
+  "sn22.49:2.16": "oder ‚Ich bin schlechter‘. "
 }
