Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.49:2.10": "Auf der Grundlage von Entscheidungen … ",
   "sn22.49:2.14": "Auf der Grundlage von Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
   "sn22.49:2.15": "‚Ich bin gleich‘ ",
-  "sn22.49:2.16": "oder ‚Ich bin schlechter‘. "
+  "sn22.49:2.16": "oder ‚Ich bin schlechter‘. ",
+  "sn22.49:2.17": "Was ist das anderes, als nicht wahrhaftig zu sehen? "
 }
