--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.49:2.5": "In Bezug auf Gefühl … ",
   "sn22.49:2.9": "In Bezug auf Wahrnehmung … ",
   "sn22.49:2.10": "In Bezug auf Entscheidungen … ",
-  "sn22.49:2.14": "Auf der Grundlage von Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
+  "sn22.49:2.14": "In Bezug auf Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
   "sn22.49:2.15": "‚Ich bin gleich‘ ",
   "sn22.49:2.16": "oder ‚Ich bin schlechter‘. ",
   "sn22.49:2.17": "Was ist das anderes, als nicht wahrhaftig zu sehen? "
