--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.49:2.14": "In Bezug auf Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich so: ‚Ich bin besser‘, ",
   "sn22.49:2.15": "‚Ich bin gleich‘ ",
   "sn22.49:2.16": "oder ‚Ich bin schlechter‘. ",
-  "sn22.49:2.17": "Was ist das anderes, als nicht wahrhaftig zu sehen? "
+  "sn22.49:2.17": "Was ist das anderes, als nicht wahrhaftig zu sehen? ",
+  "sn22.49:3.1": "Auf der Grundlage von Form, die unbeständig und Leiden ist und zugrunde gehen muss, betrachten sich manche Asketen nicht so: ‚Ich bin besser‘, "
 }
