Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.49:3.1": "In Bezug auf Form, die unbeständig und Leiden ist und zugrunde gehen muss, betrachten sich manche Asketen nicht so: ‚Ich bin besser‘, ",
   "sn22.49:3.2": "‚Ich bin gleich‘ ",
   "sn22.49:3.3": "oder ‚Ich bin schlechter‘. ",
-  "sn22.49:3.4": "Was ist das anderes, als wahrhaftig zu sehen? "
+  "sn22.49:3.4": "Was ist das anderes, als wahrhaftig zu sehen? ",
+  "sn22.49:3.5": "In Bezug auf Gefühl … "
 }
