Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.49:3.2": "‚Ich bin gleich‘ ",
   "sn22.49:3.3": "oder ‚Ich bin schlechter‘. ",
   "sn22.49:3.4": "Was ist das anderes, als wahrhaftig zu sehen? ",
-  "sn22.49:3.5": "In Bezug auf Gefühl … "
+  "sn22.49:3.5": "In Bezug auf Gefühl … ",
+  "sn22.49:3.6": "In Bezug auf Wahrnehmung … "
 }
