--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.49:3.4": "Was ist das anderes, als wahrhaftig zu sehen? ",
   "sn22.49:3.5": "In Bezug auf Gefühl … ",
   "sn22.49:3.6": "In Bezug auf Wahrnehmung … ",
-  "sn22.49:3.7": "In Bezug auf Entscheidungen … "
+  "sn22.49:3.7": "In Bezug auf Entscheidungen … ",
+  "sn22.49:3.8": "In Bezug auf Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich nicht so: ‚Ich bin besser‘, "
 }
