Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.49:3.7": "In Bezug auf Entscheidungen … ",
   "sn22.49:3.8": "In Bezug auf Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss, betrachten sie sich nicht so: ‚Ich bin besser‘, ",
   "sn22.49:3.9": "‚Ich bin gleich‘ ",
-  "sn22.49:3.10": "oder ‚Ich bin schlechter‘. "
+  "sn22.49:3.10": "oder ‚Ich bin schlechter‘. ",
+  "sn22.49:3.11": "Was ist das anderes, als wahrhaftig zu sehen? "
 }
