--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.49:3.11": "Was ist das anderes, als wahrhaftig zu sehen? ",
   "sn22.49:4.1": "Was denkst du, Soṇa? ",
   "sn22.49:4.2": "Ist Form beständig oder unbeständig?“ ",
-  "sn22.49:4.3": "„Unbeständig, Herr.“ "
+  "sn22.49:4.3": "„Unbeständig, Herr.“ ",
+  "sn22.49:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ "
 }
