--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.49:4.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.49:4.3": "„Unbeständig, Herr.“ ",
   "sn22.49:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
-  "sn22.49:4.5": "„Leiden, Herr.“ "
+  "sn22.49:4.5": "„Leiden, Herr.“ ",
+  "sn22.49:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
 }
