Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.49:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "sn22.49:4.5": "„Leiden, Herr.“ ",
   "sn22.49:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
-  "sn22.49:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
+  "sn22.49:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "sn22.49:4.8": "„Nein, Herr.“ "
 }
