--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn22.49:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "sn22.49:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.49:4.8": "„Nein, Herr.“ ",
-  "sn22.49:4.9": "„Ist Gefühl … "
+  "sn22.49:4.9": "„Ist Gefühl … ",
+  "sn22.49:4.11": "Ist Wahrnehmung … "
 }
