--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.49:4.8": "„Nein, Herr.“ ",
   "sn22.49:4.9": "„Ist Gefühl … ",
   "sn22.49:4.11": "Ist Wahrnehmung … ",
-  "sn22.49:4.12": "Sind Entscheidungen … "
+  "sn22.49:4.12": "Sind Entscheidungen … ",
+  "sn22.49:4.13": "Ist Bewusstsein beständig oder unbeständig?“ "
 }
