Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn22.49:4.11": "Ist Wahrnehmung … ",
   "sn22.49:4.12": "Sind Entscheidungen … ",
   "sn22.49:4.13": "Ist Bewusstsein beständig oder unbeständig?“ ",
-  "sn22.49:4.14": "„Unbeständig, Herr.“ "
+  "sn22.49:4.14": "„Unbeständig, Herr.“ ",
+  "sn22.49:4.15": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
