Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.49:4.13": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.49:4.14": "„Unbeständig, Herr.“ ",
   "sn22.49:4.15": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
-  "sn22.49:4.16": "„Leiden, Herr.“ "
+  "sn22.49:4.16": "„Leiden, Herr.“ ",
+  "sn22.49:4.17": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
 }
