Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.49:4.15": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn22.49:4.16": "„Leiden, Herr.“ ",
   "sn22.49:4.17": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
-  "sn22.49:4.18": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
+  "sn22.49:4.18": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "sn22.49:4.19": "„Nein, Herr.“ "
 }
