Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn22.49:4.16": "„Leiden, Herr.“ ",
   "sn22.49:4.17": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn22.49:4.18": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "sn22.49:4.19": "„Nein, Herr.“ "
+  "sn22.49:4.19": "„Nein, Herr.“ ",
+  "sn22.49:5.1": "„Daher, Soṇa, solltest du jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
