--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -49,5 +49,5 @@
   "sn22.49:5.1": "„Daher, Soṇa, solltest du jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn22.49:6.1": "Du solltest jegliche Art von Gefühl … ",
   "sn22.49:6.2": "Du solltest jegliche Art von Wahrnehmung … ",
-  "sn22.49:6.3": "jegliche Art von Entscheidungen … "
+  "sn22.49:6.3": "Du solltest jegliche Art von Entscheidungen … "
 }
