--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.50:0.1": "Verbundene Lehrreden 22.50 ",
   "sn22.50:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
-  "sn22.50:0.3": "Mit Soṇa (2) "
+  "sn22.50:0.3": "Mit Soṇa (2) ",
+  "sn22.50:1.1": "So habe ich es gehört: "
 }
