--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.50:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.50:0.3": "Mit Soṇa (2) ",
   "sn22.50:1.1": "So habe ich es gehört: ",
-  "sn22.50:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
+  "sn22.50:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
+  "sn22.50:1.3": "Da ging der Hausbesitzer Soṇa zum Buddha, verbeugte sich und setzte sich zur Seite hin. Der Buddha sagte zu ihm: "
 }
