Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.50:3.2": "Sie verstehen Gefühl … ",
   "sn22.50:3.3": "Sie verstehen Wahrnehmung … ",
   "sn22.50:3.4": "Sie verstehen Entscheidungen … ",
-  "sn22.50:3.5": "Sie verstehen Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. "
+  "sn22.50:3.5": "Sie verstehen Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. ",
+  "sn22.50:3.6": "Sie betrachte ich als wahre Asketen und Brahmanen. Diese Ehrwürdigen verwirklichen das Ziel des Lebens als Asket oder Brahmane, sie leben darin, nachdem sie es mit ihrer eigenen Einsicht erkannt haben.“ "
 }
