Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.51:1.5": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit. ",
   "sn22.51:1.6": "Gefühl ist wirklich unbeständig … ",
   "sn22.51:1.10": "Wahrnehmung ist wirklich unbeständig … ",
-  "sn22.51:1.11": "Entscheidungen sind wirklich unbeständig … "
+  "sn22.51:1.11": "Entscheidungen sind wirklich unbeständig … ",
+  "sn22.51:1.15": "Bewusstsein ist wirklich unbeständig. Ein Mönch sieht, dass es unbeständig ist: Das ist seine rechte Ansicht. "
 }
