Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.51:1.10": "Wahrnehmung ist wirklich unbeständig … ",
   "sn22.51:1.11": "Entscheidungen sind wirklich unbeständig … ",
   "sn22.51:1.15": "Bewusstsein ist wirklich unbeständig. Ein Mönch sieht, dass es unbeständig ist: Das ist seine rechte Ansicht. ",
-  "sn22.51:1.16": "Wenn er richtig sieht, wird er ernüchtert. "
+  "sn22.51:1.16": "Wenn er richtig sieht, wird er ernüchtert. ",
+  "sn22.51:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
 }
