Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.52:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.52:0.3": "Das Ende des Genießens (2) ",
   "sn22.52:1.1": "In Sāvatthī. ",
-  "sn22.52:1.2": "„Mönche und Nonnen, befasst euch korrekt mit From. Seht wahrhaftig die Unbeständigkeit der Form. "
+  "sn22.52:1.2": "„Mönche und Nonnen, befasst euch korrekt mit From. Seht wahrhaftig die Unbeständigkeit der Form. ",
+  "sn22.52:1.3": "Wenn eine Nonne das tut, wird sie von der Form ernüchtert. "
 }
