Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.52:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
   "sn22.52:1.5": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit. ",
   "sn22.52:1.6": "Befasst euch korrekt mit Gefühl … ",
-  "sn22.52:1.10": "Befasst euch korrekt mit Wahrnehmung … "
+  "sn22.52:1.10": "Befasst euch korrekt mit Wahrnehmung … ",
+  "sn22.52:1.11": "Befasst euch korrekt mit Entscheidungen … "
 }
