Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.52:1.11": "Befasst euch korrekt mit Entscheidungen … ",
   "sn22.52:1.15": "Befasst euch korrekt mit Bewusstsein. Seht wahrhaftig die Unbeständigkeit des Bewusstseins. ",
   "sn22.52:1.16": "Wenn eine Nonne das tut, wird sie vom Bewusstsein ernüchtert. ",
-  "sn22.52:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
+  "sn22.52:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
+  "sn22.52:1.18": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit.“ "
 }
