Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.53:0.1": "Verbundene Lehrreden 22.53 ",
   "sn22.53:0.2": "6. Das Kapitel über Gebundenheit ",
-  "sn22.53:0.3": "Gebundenheit "
+  "sn22.53:0.3": "Gebundenheit ",
+  "sn22.53:1.1": "In Sāvatthī. "
 }
