Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -659,7 +659,7 @@
   "sn-name:658.sn22.51": "Das Ende des Genießens ",
   "sn-name:659.sn22.52": "Das Ende des Genießens (2) ",
   "sn-name:660.sn22-majjhimapannasaka": "Die mittleren Fünfzig ",
-  "sn-name:661.sn22-upayavagga": "Das Kapitel über Gebundenheit ",
+  "sn-name:661.sn22-upayavagga": "Das Kapitel über Einbindung ",
   "sn-name:662.sn22.53": "Gebundenheit ",
   "sn-name:664.sn22.55": "Tief empfundene Sprüche ",
   "sn-name:668.sn22.59": "Kennzeichen des Nicht-selbst ",
