Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -365,7 +365,7 @@
   "dn33:1.11.123": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "dn33:1.11.124": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Gefühl … ",
   "dn33:1.11.125": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … ",
-  "dn33:1.11.126": "Oder, solange Bewusstsein besteht, besteht es an Entscheidungen gebunden, von Entscheidungen getragen, auf Entscheidungen gegründet. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
+  "dn33:1.11.126": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "dn33:1.11.127": "Vier Arten, voreingenommen zu handeln: ",
   "dn33:1.11.128": "Man handelt voreingenommen von Bevorzugung, Abneigung, Dummheit oder Feigheit. ",
   "dn33:1.11.129": "Vier Dinge, aus denen Verlangen entspringt: ",
