Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.53:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.53:0.3": "Einbindung ",
   "sn22.53:1.1": "In Sāvatthī. ",
-  "sn22.53:1.2": "„Mönche und Nonnen, wenn ihr eingebunden seid, seid ihr nicht frei. Wenn ihr nicht eingebunden seid, seid ihr frei. "
+  "sn22.53:1.2": "„Mönche und Nonnen, wenn ihr eingebunden seid, seid ihr nicht frei. Wenn ihr nicht eingebunden seid, seid ihr frei. ",
+  "sn22.53:1.3": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. "
 }
