Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -8,5 +8,5 @@
   "sn22.53:1.4": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Gefühl … ",
   "sn22.53:1.5": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … ",
   "sn22.53:1.6": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "sn22.53:2.1": "„Mönche und Nonnen, angenommen, ihr würdet sagen: "
+  "sn22.53:2.1": "„Mönche und Nonnen, angenommen, da würde jemand sagen: "
 }
