Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.53:2.1": "„Mönche und Nonnen, angenommen, da würde jemand sagen: ",
   "sn22.53:2.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. ",
   "sn22.53:3.1": "Wenn ein Mönch Gier nach dem Element der Form aufgegeben hat, ",
-  "sn22.53:3.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. "
+  "sn22.53:3.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
+  "sn22.53:3.3": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … "
 }
