Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.53:3.3": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … ",
   "sn22.53:3.4": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
   "sn22.53:3.5": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … ",
-  "sn22.53:3.6": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, "
+  "sn22.53:3.6": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, ",
+  "sn22.53:3.7": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. "
 }
