Translations by trush23 to translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -201,5 +201,6 @@
   "mn9:60-62.6": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
   "mn9:60-62.7": "आदरणीयो, संस्कार क्या है, संस्कार का उदय क्या है, संस्कार का निरोध क्या है, संस्कार के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:60-62.8": "आदरणीयो, तीन प्रकार के संस्कार होते हैं—",
-  "mn9:60-62.9": "काया संस्कार, वाणी संस्कार, चित्त संस्कार।"
+  "mn9:60-62.9": "काया संस्कार, वाणी संस्कार, चित्त संस्कार।",
+  "mn9:60-62.10": "अविद्या के उदय के साथ संस्कार का उदय होता है, अविद्या के निरोध के साथ संस्कार का निरोध होता है, संस्कार के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
 }
