Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1500,7 +1500,7 @@
   "pli-tv-kd9:7.20.60": "The Sangha there starts disputing: ",
   "pli-tv-kd9:7.20.61": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.62": "Those monks who say, ",
-  "pli-tv-kd9:7.20.63": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.63": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.64": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.65": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.66.0": "35. Discussion of the lifting of the legal procedure of ejection for not making amends ",
