Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1504,7 +1504,7 @@
   "pli-tv-kd9:7.20.64": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.65": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.66.0": "35. Discussion of the lifting of the legal procedure of ejection for not making amends ",
-  "pli-tv-kd9:7.20.66.1": "“It may be that the Sangha has done a legal procedure of ejection for not making amends for an offense against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure of ejection. ",
+  "pli-tv-kd9:7.20.66.1": "“It may be that the Sangha has done a legal procedure of ejection against a monk for not making amends for an offense, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.67": "The monks consider, ",
   "pli-tv-kd9:7.20.68": "‘The Sangha has done a legal procedure of ejection for not making amends for an offense against this monk. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.69": "Well then, let’s lift that procedure.’ ",
