Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1510,7 +1510,7 @@
   "pli-tv-kd9:7.20.69": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.70": "They lift that procedure—",
   "pli-tv-kd9:7.20.71": "illegitimately and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.72": "illegitimately but unanimous. … ",
+  "pli-tv-kd9:7.20.72": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.73": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.74": "in a legitimate-like way and with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.75": "in a legitimate-like way but unanimous. ",
