Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1523,7 +1523,7 @@
   "pli-tv-kd9:7.20.82.0": "36. Discussion of the lifting of the legal procedure of ejection for not giving up a bad view ",
   "pli-tv-kd9:7.20.82.1": "“It may be that the Sangha has done a legal procedure of ejection against a monk for not giving up a bad view, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.83": "The monks consider, ",
-  "pli-tv-kd9:7.20.84": "‘The Sangha has done a legal procedure of ejection for not giving up a bad view against this monk. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
+  "pli-tv-kd9:7.20.84": "‘The Sangha has done a legal procedure of ejection against this monk for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.85": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.86": "They lift that procedure—",
   "pli-tv-kd9:7.20.87": "illegitimately and with an incomplete assembly. … ",
